@startuml


package SystemServices
{
    class FirmwareChecker
    class FileManager
    class System
}

package Data
{
    class Store
}

package "Arduino Core/ESP-IDF"
{
    class esp_ota
    class esp_ota_ops
}

package "HAL"
{
    class Zumo32U4
}

abstract class Command
{
    - m_serviceID: String
    - m_reqPermission: Permission
    + Command(serviceId: const String&, reqPermission: const Permission&)
    + {virtual} ~Command()
    + getServiceID(): const String& {const}
    + getReqPermission(): const Permission& {const}
    + {abstract} run(request: const ApiRequest&, response: ApiResponse&, connectionCtx: Session*): void {const}
    - Command()
    - Command(const Command&)
    - Command& operator =(const Command&);
}
Command "*" *--> "1" Permission
Command ..> ApiRequest
Command ..> ApiResponse
Command ..> Session

abstract class BinaryCommand
{
    - m_binaryServiceID: String
    - m_binaryReqPermission: Permission
    + BinaryCommand(serviceId: const String&, reqPermission: const Permission&)
    + {virtual} ~BinaryCommand()
    + getBinaryServiceID(): const String& {const}
    + getBinaryReqPermission(): const Permission& {const}
    + {abstract} run(response: ApiResponse&, connectionCtx: Session*): void
    + {abstract} reset(): void
    - BinaryCommand()
    - BinaryCommand(const BinaryCommand&)
    - BinaryCommand& operator =(const BinaryCommand&);
}
BinaryCommand "*" *--> "1" Permission
Command ..> ApiRequest
Command ..> ApiResponse
Command ..> Session

class EchoDemoCommand
{
    + AuthCommand()
    + ~AuthCommand()
}
Command <|-down-EchoDemoCommand

class UploadZumoCommand
{
    - m_writtenFirmwareBytes: uint32_t
    - m_fileManager: FileManager
    - m_fwChecker: FirmwareChecker
    - {static} FIRMWARE_FILENAME: char* = {readonly} "/zumo_firmware.bin"
    - {static} TARGET_SYSTEM: char* = {readonly} "ZUMO"
    - {static} OVERWRITE_FIRMWAREINFO: bool = {readonly} true
    - writeFile(dataChunk: const uint8_t*, chunkSize: const uint16_t): bool
    + UploadZumoCommand()
    + ~UploadZumoCommand()
}
Command <|-down-UploadZumoCommand
BinaryCommand <|-down-UploadZumoCommand
UploadZumoCommand "*" *--> "1" FileManager
UploadZumoCommand "*" *--> "1" FirmwareChecker
UploadZumoCommand ..> Store : uses

class FlashZumoCommand
{
    - m_zumoDriver: Zumo32U4&
    - {static} TARGET_SYSTEM: char* = {readonly} "ZUMO"
    - {static} FIRMWARE_FILENAME: char* = {readonly} "/zumo_firmware.bin"
    + FlashZumoCommand()
    + ~FlashZumoCommand()
}
Command <|-down-FlashZumoCommand
FlashZumoCommand ..> Store : uses
FlashZumoCommand "*" *--> "1" Zumo32U4
FlashZumoCommand "*" *--> "1" FirmwareChecker
FlashZumoCommand ..> FileManager

class UploadCOMCommand
{
    - {static} TARGET_SYSTEM: char* = {readonly} "COM"
    - {static} OVERWRITE_FIRMWAREINFO: bool = {readonly} true
    - m_fwChecker: FirmwareChecker
    - m_writtenFirmwareBytes: uint32_t
    - m_isInitialized: bool
    - m_otaHandle: esp_ota_handle_t
    - m_writePartitionSize: uint32_t
    - writePartition(dataChunk: const uint8_t*, chunkSize: const uint16_t): esp_err_t
    + UploadCOMCommand()
    + ~UploadCOMCommand()
}
Command <|-down-UploadCOMCommand
BinaryCommand <|-down-UploadCOMCommand
UploadCOMCommand "*" *--> "1" FirmwareChecker
UploadCOMCommand "*" *--> "1" esp_ota_handle_t
UploadCOMCommand ..> Store : uses

class FlashCOMCommand
{
    - {static} TARGET_SYSTEM: char* = {readonly} "COM"
    - {static} REBOOT_DELAY_MS: uint16_t = {readonly} 5000
    + FlashCOMCommand()
    + ~FlashCOMCommand()
}
Command <|-down-FlashCOMCommand
FlashCOMCommand ..> Store
FlashCOMCommand ..> esp_ota_ops

class RebootZumoCommand
{
    + RebootZumoCommand()
    + ~RebootZumoCommand()
}
Command <|-down-RebootZumoCommand
RebootZumoCommand "*" *--> "1" Zumo32U4

class SetSTACredentialsCommand
{
    + SetSTACredentialsCommand()
    + ~SetSTACredentialsCommand()
}
Command <|-down-SetSTACredentialsCommand
SetSTACredentialsCommand ..> Store : uses

class RebootCOMCommand
{
    + RebootCOMCommand()
    + ~RebootCOMCommand()
}
Command <|-down-RebootCOMCommand

class GetFirmwareInfoCommand
{
    + GetFirmwareInfoCommand()
    + ~GetFirmwareInfoCommand()
}
Command <|-down-GetFirmwareInfoCommand
@enduml
